--- a/careers.html
+++ b/careers.html
@@ -5,6 +5,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Careers-Grain Chain</title>
+
+    <!-- favicons ========== -->
+    <link rel="shortcut icon" href="images/favicon/favicon.ico">
+    <link rel="apple-touch-icon" href="images/favicon/apple-touch-icon-114x114.png">
+    <link rel="apple-touch-icon" sizes="72x72" href="images/favicon/apple-touch-icon-72x72.png">
+    <link rel="apple-touch-icon" sizes="114x114" href="images/favicon/apple-touch-icon-114x114.png">
+
     <!-- bootrap cdn -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
         integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
@@ -29,7 +36,7 @@
             <div class="header-inner">
                 <!-- logo -->
                 <div class="logo">
-                    <a href="#"><img class="img-fluid" src="images/logo.png" alt="Grain Chain"></a>
+                    <a href="index.html"><img class="img-fluid" src="images/logo.png" alt="Grain Chain"></a>
                 </div>
 
                 <!-- Primary  Menu Starts here  -->
@@ -37,10 +44,10 @@
                     <span class="menu-toggle menu-close"><img class="img-fluid" src="images/close.png"
                             alt="mobile toggle"></span>
                     <ul>
-                        <li><a href="#">Products</a></li>
-                        <li><a href="#">Solutions</a></li>
-                        <li><a href="#">Media</a></li>
-                        <li><a href="#">About</a></li>
+                        <li><a href="products.html">Products</a></li>
+                        <li><a href="solutions.html">Solutions</a></li>
+                        <li><a href="media.html">Media</a></li>
+                        <li><a href="team.html">About</a></li>
                         <li><a href="#"><img src="images/earth.png" alt=""></a></li>
                     </ul>
                 </nav>
@@ -71,15 +78,20 @@
             <img class="img-fluid" src="images/careers/display-img.png" alt="">
         </div>
         <div class="innovative-team-content">
-            <h2 class="title text-left orange bottom font-weight-bold"><span>Join our innovative team</span></h2>
-            <p>GrainChain’s innovative suite of products is bringing eﬃciency, transparency and security to the
+            <h2 class="title text-left orange bottom font-weight-bold wow animate__animated animate__fadeInUp">
+                <span>Join our innovative team</span></h2>
+            <p class="wow animate__animated animate__fadeInUp animate__delay0-5s">GrainChain’s innovative suite of
+                products is bringing eﬃciency, transparency and security to the
                 global agricultural supply chain.</p>
             <div class="learn-more-tab-wrapper">
-                <p>Learn more about</p>
+                <p class="wow animate__animated animate__fadeInUp animate__delay0-5s">Learn more about</p>
                 <ul>
-                    <li><a href="#">Our Team</a></li>
-                    <li><a href="#">Our Products</a></li>
-                    <li><a href="#">Our Solutions</a></li>
+                    <li class="wow animate__animated animate__fadeInRight animate__delay0-5s"><a href="team.html">Our
+                            Team</a></li>
+                    <li class="wow animate__animated animate__fadeInRight animate__delay0-5s"><a
+                            href="products.html">Our Products</a></li>
+                    <li class="wow animate__animated animate__fadeInRight animate__delay0-5s"><a
+                            href="solutions.html">Our Solutions</a></li>
                 </ul>
             </div>
         </div>
@@ -90,11 +102,13 @@
     <!-- innovative-team -->
     <section class="current-openings">
         <div class="container-inner">
-            <h2 class="title bottom orange bottom-center font-weight-bold"><span>Current Openings</span></h2>
+            <h2
+                class="title bottom orange bottom-center font-weight-bold wow animate__animated animate__fadeInUp animate__delay0-5s">
+                <span>Current Openings</span></h2>
             <div class="openings-list">
                 <div class="row">
                     <div class="col-md-4 col-sm-6">
-                        <div class="opening-box">
+                        <div class="opening-box wow animate__animated animate__fadeInUp animate__delay0-5s">
                             <div class="opening-icon">
                                 <img src="images/careers/career-icon-1.png" alt="">
                             </div>
@@ -105,7 +119,7 @@
                         </div>
                     </div>
                     <div class="col-md-4 col-sm-6">
-                        <div class="opening-box">
+                        <div class="opening-box wow animate__animated animate__fadeInUp animate__delay0-5s">
                             <div class="opening-icon">
                                 <img src="images/careers/career-icon-2.png" alt="">
                             </div>
@@ -116,7 +130,7 @@
                         </div>
                     </div>
                     <div class="col-md-4 col-sm-6">
-                        <div class="opening-box">
+                        <div class="opening-box wow animate__animated animate__fadeInUp animate__delay0-5s">
                             <div class="opening-icon">
                                 <img src="images/careers/career-icon-3.png" alt="">
                             </div>
@@ -127,9 +141,9 @@
                         </div>
                     </div>
 
-           
+
                     <div class="col-md-4 col-sm-6">
-                        <div class="opening-box">
+                        <div class="opening-box wow animate__animated animate__fadeInUp animate__delay0-5s">
                             <div class="opening-icon">
                                 <img src="images/careers/career-icon-4.png" alt="">
                             </div>
@@ -140,7 +154,7 @@
                         </div>
                     </div>
                     <div class="col-md-4 col-sm-6">
-                        <div class="opening-box">
+                        <div class="opening-box wow animate__animated animate__fadeInUp animate__delay0-5s">
                             <div class="opening-icon">
                                 <img src="images/careers/career-icon-5.png" alt="">
                             </div>
@@ -151,7 +165,7 @@
                         </div>
                     </div>
                     <div class="col-md-4 col-sm-6">
-                        <div class="opening-box">
+                        <div class="opening-box wow animate__animated animate__fadeInUp animate__delay0-5s">
                             <div class="opening-icon">
                                 <img src="images/careers/career-icon-3.png" alt="">
                             </div>
@@ -161,13 +175,14 @@
                             </div>
                         </div>
                     </div>
+                </div>
+                <button class="btn btn-primary btn-view-more ">View More</button>
             </div>
-            <button class="btn btn-primary btn-view-more">View More</button>
-        </div>
     </section>
 
     <!-- pattern img -->
-    <img class="img-fluid desktop-hide" src="images/products/bg-pattern-3.png" alt="">
+    <img class="img-fluid desktop-hide  wow animate__animated animate__fadeInUp animate__delay0-5s"
+        src="images/products/bg-pattern-3.png" alt="">
 
     <!-- home contact -->
     <section class="home-contact home-contact-2" id="bottom-contact">
@@ -236,32 +251,30 @@
                             <div class="footer-menu-box">
                                 <h5>Products</h5>
                                 <ul>
-                                    <li><a href="#">Trumodity</a></li>
-                                    <li><a href="#">Seed Audit</a></li>
-                                    <li><a href="#">SiloSys</a></li>
-                                    <li><a href="#">HarvX</a></li>
+                                    <li><a href="trumodity.html">Trumodity</a></li>
+                                    <li><a href="seed-audit.html">Seed Audit</a></li>
+                                    <li><a href="sylosil">SiloSys</a></li>
+                                    <li><a href="harvx.html">HarvX</a></li>
                                 </ul>
                             </div>
 
                             <div class="footer-menu-box">
                                 <h5>Solutions</h5>
                                 <ul>
-                                    <li><a href="#">For producers</a></li>
-                                    <li><a href="#">For Storage Operators</a></li>
-                                    <li><a href="#">For Buyers</a></li>
-                                    <li><a href="#">Blockchain and Smart Contracts</a></li>
+                                    <li><a href="producer.html">For producers</a></li>
+                                    <li><a href="storage.html">For Storage Operators</a></li>
+                                    <li><a href="buyers.html">For Buyers</a></li>
+                                    <li><a href="blockchain.html">Blockchain and Smart Contracts</a></li>
                                 </ul>
                             </div>
 
                             <div class="footer-menu-box">
                                 <h5>About</h5>
                                 <ul>
-                                    <li><a href="#">Our Team</a></li>
-                                    <li><a href="#">Media</a></li>
-                                    <li><a href="#">Careers</a></li>
-
+                                    <li><a href="team.html">Our Team</a></li>
+                                    <li><a href="media.html">Media</a></li>
+                                    <li><a href="careers.html">Careers</a></li>
                                 </ul>
-
                             </div>
                         </div>
                     </div>
@@ -276,7 +289,6 @@
                     </li>
                     <li><a href="#"><img src="images/intagram.png" alt=""></a></li>
                     <li><a href="#"><img src="images/sm-icon-telegram-Home-Desktop-Website-GC.png" alt=""></a></li>
-
                     <li><a href="#"><img src="images/sm-icon-in-Home-Desktop-Website-GC.png" alt=""></a></li>
                     <li><a href="#"><img src="images/sm-icon-twit-Home-Desktop-Website-GC.png" alt=""></a></li>
 
@@ -286,12 +298,14 @@
 
             <!-- copyright -->
             <div class="copyright">
-                <p>@2020 Copyright, GrainChain - <a href="#">Privacy Policy</a> - <a href="#">Terms of Service</a> - <a href="#">Dwolla Terms of Service</a></p>
+                <p>@2020 Copyright, GrainChain - <a href="#">Privacy Policy</a> - <a href="#">Terms of Service</a> - <a
+                        href="#">Dwolla Terms of Service</a></p>
             </div>
             <!-- copyright -->
         </div>
     </footer>
     <!-- footer -->
+
 
 
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
