--- a/index.html
+++ b/index.html
@@ -5,6 +5,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Grain Chain</title>
+
+    <!-- favicons ========== -->
+    <link rel="shortcut icon" href="images/favicon/favicon.ico">
+    <link rel="apple-touch-icon" href="images/favicon/apple-touch-icon-114x114.png">
+    <link rel="apple-touch-icon" sizes="72x72" href="images/favicon/apple-touch-icon-72x72.png">
+    <link rel="apple-touch-icon" sizes="114x114" href="images/favicon/apple-touch-icon-114x114.png">
+
     <!-- bootrap cdn -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
         integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
@@ -29,7 +36,7 @@
             <div class="header-inner">
                 <!-- logo -->
                 <div class="logo">
-                    <a href="#"><img class="img-fluid" src="images/logo.png" alt="Grain Chain"></a>
+                    <a href="index.html"><img class="img-fluid" src="images/logo.png" alt="Grain Chain"></a>
                 </div>
 
                 <!-- Primary  Menu Starts here  -->
@@ -37,10 +44,10 @@
                     <span class="menu-toggle menu-close"><img class="img-fluid" src="images/close.png"
                             alt="mobile toggle"></span>
                     <ul>
-                        <li><a href="#">Products</a></li>
-                        <li><a href="#">Solutions</a></li>
-                        <li><a href="#">Media</a></li>
-                        <li><a href="#">About</a></li>
+                        <li><a href="products.html">Products</a></li>
+                        <li><a href="solutions.html">Solutions</a></li>
+                        <li><a href="media.html">Media</a></li>
+                        <li><a href="team.html">About</a></li>
                         <li><a href="#"><img src="images/earth.png" alt=""></a></li>
                     </ul>
                 </nav>
@@ -59,12 +66,12 @@
                     <h1 class="banner-title wow animate__animated animate__fadeInUp">Creating Supply Chain Efficiency
                     </h1>
                     <button class="btn btn-primary wow animate__animated animate__fadeInUp animate__delay0-5s"
-                    id="banner-enquiry">Book A Demo</button>
+                        id="banner-enquiry">Book A Demo</button>
                     <img class="img-fluid banner-img  wow animate__animated animate__fadeInDown animate__delay-1s"
                         src="images/banner-img.png" alt="banner image">
                 </div>
-              
-               
+
+
             </div>
         </div>
     </section>
@@ -268,7 +275,9 @@
             <div class="row">
                 <div class="col-md-3 col-6">
                     <div class="stats-box wow animate__animated animate__fadeInUp">
-                        <img src="images/comoditity-stats.png" alt="">
+                        <div class="img-wrapper">
+                            <img src="images/comoditity-stats.png" alt="">
+                        </div>
                         <p>Our system has processed </p>
                         <h3>over 12 billion</h3>
                         <p>pounds of commodities</p>
@@ -276,7 +285,9 @@
                 </div>
                 <div class="col-md-3 col-6">
                     <div class="stats-box  wow animate__animated animate__fadeInUp  animate__delay-1s">
-                        <img src="images/physical-operation-stats.png" alt="">
+                        <div class="img-wrapper">
+                            <img src="images/physical-operation-stats.png" alt="">
+                        </div>
                         <p>Physical operations in </p>
                         <h3>3 countries</h3>
                         <p></p>
@@ -284,7 +295,9 @@
                 </div>
                 <div class="col-md-3 col-6">
                     <div class="stats-box  wow animate__animated animate__fadeInUp  animate__delay-2s">
-                        <img src="images/processing-commodities-stats.png" alt="">
+                        <div class="img-wrapper">
+                            <img src="images/processing-commodities-stats.png" alt="">
+                        </div>
                         <p>Processing</p>
                         <h3>24 diﬀerent</h3>
                         <p>commodities</p>
@@ -292,7 +305,10 @@
                 </div>
                 <div class="col-md-3 col-6">
                     <div class="stats-box  wow animate__animated animate__fadeInUp  animate__delay-3s">
-                        <img src="images/participants-stats.png" alt="">
+                        <div class="img-wrapper">
+                            <img src="images/participants-stats.png" alt="">
+                        </div>
+
                         <h3>Over 2500</h3>
                         <p>participants</p>
                     </div>
@@ -369,32 +385,30 @@
                             <div class="footer-menu-box">
                                 <h5>Products</h5>
                                 <ul>
-                                    <li><a href="#">Trumodity</a></li>
-                                    <li><a href="#">Seed Audit</a></li>
-                                    <li><a href="#">SiloSys</a></li>
-                                    <li><a href="#">HarvX</a></li>
+                                    <li><a href="trumodity.html">Trumodity</a></li>
+                                    <li><a href="seed-audit.html">Seed Audit</a></li>
+                                    <li><a href="sylosil">SiloSys</a></li>
+                                    <li><a href="harvx.html">HarvX</a></li>
                                 </ul>
                             </div>
 
                             <div class="footer-menu-box">
                                 <h5>Solutions</h5>
                                 <ul>
-                                    <li><a href="#">For producers</a></li>
-                                    <li><a href="#">For Storage Operators</a></li>
-                                    <li><a href="#">For Buyers</a></li>
-                                    <li><a href="#">Blockchain and Smart Contracts</a></li>
+                                    <li><a href="producer.html">For producers</a></li>
+                                    <li><a href="storage.html">For Storage Operators</a></li>
+                                    <li><a href="buyers.html">For Buyers</a></li>
+                                    <li><a href="blockchain.html">Blockchain and Smart Contracts</a></li>
                                 </ul>
                             </div>
 
                             <div class="footer-menu-box">
                                 <h5>About</h5>
                                 <ul>
-                                    <li><a href="#">Our Team</a></li>
-                                    <li><a href="#">Media</a></li>
-                                    <li><a href="#">Careers</a></li>
-
+                                    <li><a href="team.html">Our Team</a></li>
+                                    <li><a href="media.html">Media</a></li>
+                                    <li><a href="careers.html">Careers</a></li>
                                 </ul>
-
                             </div>
                         </div>
                     </div>
@@ -409,7 +423,6 @@
                     </li>
                     <li><a href="#"><img src="images/intagram.png" alt=""></a></li>
                     <li><a href="#"><img src="images/sm-icon-telegram-Home-Desktop-Website-GC.png" alt=""></a></li>
-
                     <li><a href="#"><img src="images/sm-icon-in-Home-Desktop-Website-GC.png" alt=""></a></li>
                     <li><a href="#"><img src="images/sm-icon-twit-Home-Desktop-Website-GC.png" alt=""></a></li>
 
@@ -419,7 +432,8 @@
 
             <!-- copyright -->
             <div class="copyright">
-                <p>@2020 Copyright, GrainChain - <a href="#">Privacy Policy</a> - <a href="#">Terms of Service</a> - <a href="#">Dwolla Terms of Service</a></p>
+                <p>@2020 Copyright, GrainChain - <a href="#">Privacy Policy</a> - <a href="#">Terms of Service</a> - <a
+                        href="#">Dwolla Terms of Service</a></p>
             </div>
             <!-- copyright -->
         </div>
