--- a/media.html
+++ b/media.html
@@ -4,7 +4,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Careers-Grain Chain</title>
+    <title>Media-Grain Chain</title>
+
+    <!-- favicons ========== -->
+    <link rel="shortcut icon" href="images/favicon/favicon.ico">
+    <link rel="apple-touch-icon" href="images/favicon/apple-touch-icon-114x114.png">
+    <link rel="apple-touch-icon" sizes="72x72" href="images/favicon/apple-touch-icon-72x72.png">
+    <link rel="apple-touch-icon" sizes="114x114" href="images/favicon/apple-touch-icon-114x114.png">
+
     <!-- bootrap cdn -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
         integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
@@ -29,7 +36,7 @@
             <div class="header-inner">
                 <!-- logo -->
                 <div class="logo">
-                    <a href="#"><img class="img-fluid" src="images/logo.png" alt="Grain Chain"></a>
+                    <a href="index.html"><img class="img-fluid" src="images/logo.png" alt="Grain Chain"></a>
                 </div>
 
                 <!-- Primary  Menu Starts here  -->
@@ -37,10 +44,10 @@
                     <span class="menu-toggle menu-close"><img class="img-fluid" src="images/close.png"
                             alt="mobile toggle"></span>
                     <ul>
-                        <li><a href="#">Products</a></li>
-                        <li><a href="#">Solutions</a></li>
-                        <li><a href="#">Media</a></li>
-                        <li><a href="#">About</a></li>
+                        <li><a href="products.html">Products</a></li>
+                        <li><a href="solutions.html">Solutions</a></li>
+                        <li><a href="media.html">Media</a></li>
+                        <li><a href="team.html">About</a></li>
                         <li><a href="#"><img src="images/earth.png" alt=""></a></li>
                     </ul>
                 </nav>
@@ -72,19 +79,19 @@
     <section class="media-releases">
         <div class="container">
             <!-- media releases tabs -->
-            <ul class="media-releases-tabs mobile-hide">
+            <ul class="media-releases-tabs mobile-hide  wow animate__animated animate__fadeInUp">
                 <li class="active" data-tab="#recent-news">Recent News</li>
                 <li data-tab="#press-releases">Press Releases</li>
             </ul>
             <!-- media releases tabs -->
-            <ul class="media-releases-tabs desktop-hide">
+            <ul class="media-releases-tabs desktop-hide  wow animate__animated animate__fadeInUp">
                 <li class="active" data-tab="#recent-news-mobile">Recent News</li>
                 <li data-tab="#press-releases-mobile">Press Releases</li>
             </ul>
 
 
             <!-- media tab wrapper desktop -->
-            <div class="media-tab-content-wrapper mobile-hide">
+            <div class="media-tab-content-wrapper mobile-hide  wow animate__animated animate__fadeInUp">
                 <!-- media tabs content -->
                 <!-- recent news -->
                 <div class="media-tabs-content active" id="recent-news">
@@ -239,7 +246,7 @@
 
 
             <!-- media tab content wrapper mobile -->
-            <div class="media-tab-content-wrapper mobile desktop-hide">
+            <div class="media-tab-content-wrapper mobile desktop-hide  wow animate__animated animate__fadeInUp">
                 <!-- media tabs content -->
                 <!-- recent news -->
                 <div class="media-tabs-content active owl-carousel owl-theme" id="recent-news-mobile">
@@ -413,8 +420,10 @@
                 <!-- press releases -->
 
             </div>
-            
-            <button class="btn btn-view-more btn-primary">View More</button>
+
+            <button
+                class="btn btn-view-more btn-primary  wow animate__animated animate__fadeInUp animate__delay0-5s">View
+                More</button>
         </div>
     </section>
     <!-- media releaes -->
@@ -426,20 +435,23 @@
         <div class="container-inner">
             <h2 class="title font-weight-bold  bottom bottom-center orange wow animate__animated animate__fadeInUp">
                 <span>About GrainChain Inc</span></h2>
-            <p>GrainChain’s innovative suite of products help Producers bring their products to market quickly,
+            <p class=" wow animate__animated animate__fadeInUp animate__delay0-5s">GrainChain’s innovative suite of
+                products help Producers bring their products to market quickly,
                 efficiently and reliably. Cmodity is our flagship transaction and exchange platform that enables
                 trustworthy transactions, connects Producers directly to buyers and reduces uncertainties in doing
                 business internationally. Our system handles all the post-harvest processes in one cloud-based,
                 blockchain enabled platform. SiloSys is the inventory management solution for grain elevators and
                 storage operators. HarvX is the logistics management system for transporting harvests from farms to
                 storage operators. </p>
-            <p>In 2013, GrainChain’s founders were approached by a large Texas farm looking to digitize its supply chain
+            <p class=" wow animate__animated animate__fadeInUp animate__delay0-5s">In 2013, GrainChain’s founders were
+                approached by a large Texas farm looking to digitize its supply chain
                 operations, improve inventory management, and enable fast, secure, and easy payment. Finding no
                 satisfactory solution in the market, GrainChain’s founders set out to build one, and created SiloSys.
                 After numerous years in the industry, and with the expansion of SiloSys, the founders set out to
                 simplify the flow of the entire supply chain. In 2018, GrainChain was officially founded to accomplish
                 this goal.</p>
-            <p>Since then, our company has established agreements in multiple regions to help make the commodity supply
+            <p class=" wow animate__animated animate__fadeInUp animate__delay0-5s">Since then, our company has
+                established agreements in multiple regions to help make the commodity supply
                 chain more efficient, secure and transparent. GrainChain has offices in McAllen, Texas, Miami,
                 Guadalajara and Honduras.</p>
         </div>
@@ -458,10 +470,12 @@
             <h2
                 class="title bottom text-white bottom-center font-weight-bold orange wow animate__animated animate__fadeInUp">
                 <span>Media Kit</span></h2>
-            <p class="text-white">Download high quality versions of our logo, screenshots from our suite of products and
+            <p class="text-white  wow animate__animated animate__fadeInUp animate__delay0-5s">Download high quality
+                versions of our logo, screenshots from our suite of products and
                 more information:
             </p>
-            <a href="#" class="btn btn-transparent">Download Media Kit</a>
+            <a href="#" class="btn btn-transparent  wow animate__animated animate__fadeInUp animate__delay0-5s">Download
+                Media Kit</a>
         </div>
     </section>
 
@@ -536,32 +550,30 @@
                             <div class="footer-menu-box">
                                 <h5>Products</h5>
                                 <ul>
-                                    <li><a href="#">Trumodity</a></li>
-                                    <li><a href="#">Seed Audit</a></li>
-                                    <li><a href="#">SiloSys</a></li>
-                                    <li><a href="#">HarvX</a></li>
+                                    <li><a href="trumodity.html">Trumodity</a></li>
+                                    <li><a href="seed-audit.html">Seed Audit</a></li>
+                                    <li><a href="sylosil">SiloSys</a></li>
+                                    <li><a href="harvx.html">HarvX</a></li>
                                 </ul>
                             </div>
 
                             <div class="footer-menu-box">
                                 <h5>Solutions</h5>
                                 <ul>
-                                    <li><a href="#">For producers</a></li>
-                                    <li><a href="#">For Storage Operators</a></li>
-                                    <li><a href="#">For Buyers</a></li>
-                                    <li><a href="#">Blockchain and Smart Contracts</a></li>
+                                    <li><a href="producer.html">For producers</a></li>
+                                    <li><a href="storage.html">For Storage Operators</a></li>
+                                    <li><a href="buyers.html">For Buyers</a></li>
+                                    <li><a href="blockchain.html">Blockchain and Smart Contracts</a></li>
                                 </ul>
                             </div>
 
                             <div class="footer-menu-box">
                                 <h5>About</h5>
                                 <ul>
-                                    <li><a href="#">Our Team</a></li>
-                                    <li><a href="#">Media</a></li>
-                                    <li><a href="#">Careers</a></li>
-
+                                    <li><a href="team.html">Our Team</a></li>
+                                    <li><a href="media.html">Media</a></li>
+                                    <li><a href="careers.html">Careers</a></li>
                                 </ul>
-
                             </div>
                         </div>
                     </div>
@@ -576,7 +588,6 @@
                     </li>
                     <li><a href="#"><img src="images/intagram.png" alt=""></a></li>
                     <li><a href="#"><img src="images/sm-icon-telegram-Home-Desktop-Website-GC.png" alt=""></a></li>
-
                     <li><a href="#"><img src="images/sm-icon-in-Home-Desktop-Website-GC.png" alt=""></a></li>
                     <li><a href="#"><img src="images/sm-icon-twit-Home-Desktop-Website-GC.png" alt=""></a></li>
 
@@ -586,12 +597,14 @@
 
             <!-- copyright -->
             <div class="copyright">
-                <p>@2020 Copyright, GrainChain - <a href="#">Privacy Policy</a> - <a href="#">Terms of Service</a> - <a href="#">Dwolla Terms of Service</a></p>
+                <p>@2020 Copyright, GrainChain - <a href="#">Privacy Policy</a> - <a href="#">Terms of Service</a> - <a
+                        href="#">Dwolla Terms of Service</a></p>
             </div>
             <!-- copyright -->
         </div>
     </footer>
     <!-- footer -->
+
 
 
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
