--- a/seed-audit.html
+++ b/seed-audit.html
@@ -4,11 +4,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Trumodity-Grain Chain</title>
+    <title>Seed Audit-Grain Chain</title>
+        <!-- favicons ========== -->
+        <link rel="shortcut icon" href="images/favicon/favicon.ico">
+        <link rel="apple-touch-icon" href="images/favicon/apple-touch-icon-114x114.png">
+        <link rel="apple-touch-icon" sizes="72x72" href="images/favicon/apple-touch-icon-72x72.png">
+        <link rel="apple-touch-icon" sizes="114x114" href="images/favicon/apple-touch-icon-114x114.png">
+    
     <!-- bootrap cdn -->
-
-
-
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
         integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
 
@@ -63,11 +66,11 @@
     <section class="banner banner-seed-audit banner-2 bg-transparent">
         <div class="container-inner">
             <div class="banner-content">
-                <img class="title-image img-fluid" src="images/seed-audit/banner-title.png" alt="">
+                <img class="title-image img-fluid  wow animate__animated animate__fadeInUp" src="images/seed-audit/banner-title.png" alt="">
                 <p class="text-white wow animate__animated animate__fadeInUp animate__delay0-5s">Preharvest Management
                     Solution
                 </p>
-                <button class="btn btn-transparent   wow animate__animated animate__fadeInUp animate__delay-1s"
+                <button class="btn btn-transparent   wow animate__animated animate__fadeInUp animate__delay0-5s"
                     id="banner-enquiry">Book a Demo</button>
             </div>
         </div>
@@ -79,8 +82,8 @@
             <div class="row">
                 <div class="col-md-6">
                     <div class="seed-audit-content">
-                        <img src="images/seed-audit/section-title-img.png" class="section-title img-fluid" alt="">
-                        <p>Seed Audit brings the efficiency, transparency and reliability of our postharvest solutions
+                        <img src="images/seed-audit/section-title-img.png" class="section-title img-fluid  wow animate__animated animate__fadeInUp" alt="">
+                        <p class=" wow animate__animated animate__fadeInUp animate__delay0-5s">Seed Audit brings the efficiency, transparency and reliability of our postharvest solutions
                             to the preharvest process.
                             All data from seed to harvest (seed receipts, fertilizers, geofenced crop maps, etc) is
                             recorded and tracked securely through our solution, while also allowing for audits and
@@ -88,7 +91,7 @@
                     </div>
                 </div>
                 <div class="col-md-6">
-                    <img src="images/seed-audit/tablet.png" alt="" class="img-fluid mobile-hide display-img">
+                    <img src="images/seed-audit/tablet.png" alt="" class="img-fluid mobile-hide  wow animate__animated animate__fadeInRight animate__delay0-5s display-img">
                 </div>
             </div>
         </div>
@@ -101,7 +104,7 @@
         <div class="container">
             <h2 class="title text-left  bottom font-weight-bold   wow animate__animated animate__fadeInUp">
                 <span>Features</span></h2>
-            <div class="seed-features-slider">
+            <div class="seed-features-slider mobile-hide">
                 <ul class="seed-features owl-carousel owl-theme">
                     <li class="slide-1">
                         <img src="images/seed-audit/mobile-1.png" class="img-fluid" alt="">
@@ -125,6 +128,32 @@
                 <img src="images/seed-audit/mobile-features-bg-4.png" class="img-fluid slide-bg" id="slide-4" alt="">
                 <img src="images/seed-audit/mobile-features-bg-5.png" class="img-fluid slide-bg" id="slide-5" alt="">
             </div>
+
+            <div class="seed-features-slider desktop-hide">
+                <ul class="seed-features owl-carousel owl-theme">
+                    <li class="slide-6">
+                        <img src="images/seed-audit/mobile-6.png" class="img-fluid" alt="">
+                    </li>
+                    <li class="slide-7">
+                        <img src="images/seed-audit/mobile-2.png" class="img-fluid" alt="">
+                    </li>
+                    <li class="slide-8">
+                        <img src="images/seed-audit/mobile-3.png" class="img-fluid" alt="">
+                    </li>
+                    <li class="slide-9">
+                        <img src="images/seed-audit/mobile-4.png" class="img-fluid" alt="">
+                    </li>
+                    <li class="slide-10">
+                        <img src="images/seed-audit/mobile-5.png" class="img-fluid" alt="">
+                    </li>
+                </ul>
+                <img src="images/seed-audit/features-1.png" class="img-fluid slide-bg active" id="slide-6"
+                    alt="">
+                <img src="images/seed-audit/features-2.png" class="img-fluid slide-bg" id="slide-7" alt="">
+                <img src="images/seed-audit/features-3.png" class="img-fluid slide-bg" id="slide-8" alt="">
+                <img src="images/seed-audit/features-4.png" class="img-fluid slide-bg" id="slide-9" alt="">
+                <img src="images/seed-audit/features-5.png" class="img-fluid slide-bg" id="slide-10" alt="">
+            </div>
         </div>
     </div>
     <!-- seed audit features -->
@@ -133,7 +162,7 @@
     <img src="images/seed-audit/bg-grey-2.png" class="img-fluid desktop-hide" alt="">
     <!-- product-details -->
     <div class="product-details product-details-2 seed-product-details">
-        <div class="title-image-wrapper">
+        <div class="title-image-wrapper  wow animate__animated animate__fadeInUp">
             <img src="images/seed-audit/seed-audit-logo-2.png" alt="">
         </div>
         <h2 class="title orange small bottom bottom-center font-weight-bold   wow animate__animated animate__fadeInUp">
@@ -146,7 +175,7 @@
                     <div class="row">
                         <div class="col-md-4">
                             <div
-                                class="product-details-box text-center   wow animate__animated animate__fadeInUp animate__delay-1s">
+                                class="product-details-box text-center   wow animate__animated animate__fadeInUp animate__delay0-5s">
                                 <img class="img-fluid" src="images/buyers/trumodity-icon.png" alt="">
                                 <p><strong>Trumodity</strong> facilitates smart contracts between Producers
                                     and buyers and ensures accurate, real-time tracking of commodities throughout the
@@ -157,7 +186,7 @@
                         </div>
                         <div class="col-md-4">
                             <div
-                                class="product-details-box text-center   wow animate__animated animate__fadeInUp animate__delay-1s">
+                                class="product-details-box text-center   wow animate__animated animate__fadeInUp animate__delay0-5s">
                                 <img class="img-fluid" src="images/buyers/sylosis.icon" alt="">
                                 <p><strong>SiloSys</strong> is our inventory management platform that securely records
                                     and
@@ -169,7 +198,7 @@
                         </div>
                         <div class="col-md-4">
                             <div
-                                class="product-details-box text-center   wow animate__animated animate__fadeInUp animate__delay-1s">
+                                class="product-details-box text-center   wow animate__animated animate__fadeInUp animate__delay0-5s">
                                 <img class="img-fluid" src="images/buyers/harvex-icon.png" alt="">
                                 <p><strong>HarvX</strong> is our logistics platform that facilitates efficient pickup
                                     and
