--- a/sylosys.html
+++ b/sylosys.html
@@ -4,7 +4,15 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Trumodity-Grain Chain</title>
+    <title>Sylosys-Grain Chain</title>
+    
+    <!-- favicons ========== -->
+    <link rel="shortcut icon" href="images/favicon/favicon.ico">
+    <link rel="apple-touch-icon" href="images/favicon/apple-touch-icon-114x114.png">
+    <link rel="apple-touch-icon" sizes="72x72" href="images/favicon/apple-touch-icon-72x72.png">
+    <link rel="apple-touch-icon" sizes="114x114" href="images/favicon/apple-touch-icon-114x114.png">
+
+
     <!-- bootrap cdn -->
 
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
@@ -33,7 +41,7 @@
             <div class="header-inner">
                 <!-- logo -->
                 <div class="logo">
-                    <a href="#"><img class="img-fluid" src="images/logo.png" alt="Grain Chain"></a>
+                    <a href="index.html"><img class="img-fluid" src="images/logo.png" alt="Grain Chain"></a>
                 </div>
 
                 <!-- Primary  Menu Starts here  -->
@@ -41,10 +49,10 @@
                     <span class="menu-toggle menu-close"><img class="img-fluid" src="images/close.png"
                             alt="mobile toggle"></span>
                     <ul>
-                        <li><a href="#">Products</a></li>
-                        <li><a href="#">Solutions</a></li>
-                        <li><a href="#">Media</a></li>
-                        <li><a href="#">About</a></li>
+                        <li><a href="products.html">Products</a></li>
+                        <li><a href="solutions.html">Solutions</a></li>
+                        <li><a href="media.html">Media</a></li>
+                        <li><a href="team.html">About</a></li>
                         <li><a href="#"><img src="images/earth.png" alt=""></a></li>
                     </ul>
                 </nav>
@@ -61,7 +69,8 @@
     <section class="banner banner-sylosis banner-2 bg-transparent">
         <div class="container-inner">
             <div class="banner-content">
-                <img class="title-image img-fluid" src="images/sylosis/banner-title-img.png" alt="">
+                <img class="title-image img-fluid  wow animate__animated animate__fadeInUp"
+                    src="images/sylosis/banner-title-img.png" alt="">
                 <p class="text-white wow animate__animated animate__fadeInUp animate__delay0-5s">Inventory Management
                     Solution </p>
                 <button class="btn btn-transparent   wow animate__animated animate__fadeInUp animate__delay-1s"
@@ -77,8 +86,10 @@
             <div class="row">
                 <div class="col-md-6">
                     <div class="about-sylosis-content">
-                        <img src="images/sylosis/section-title-img.png" alt="" class="title-img img-fluid">
-                        <p><strong>SiloSys</strong> is an IoT and blockchain-enabled inventory management system for
+                        <img src="images/sylosis/section-title-img.png" alt=""
+                            class="title-img img-fluid  wow animate__animated animate__fadeInUp">
+                        <p class=" wow animate__animated animate__fadeInUp animate__delay0-5s"><strong>SiloSys</strong>
+                            is an IoT and blockchain-enabled inventory management system for
                             producers and storage operators. It digitizes and automates all business processes and
                             operations, eliminating manual data input and providing reliable inventory and accounting
                             records. The SiloSys mobile app is an extension of the desktop application which has already
@@ -87,14 +98,13 @@
                     </div>
                 </div>
                 <div class="col-md-6">
-                    <img src="images/sylosis/computer.png" alt="" class="display-img  img-fluid">
+                    <img src="images/sylosis/computer.png" alt=""
+                        class="display-img img-fluid  wow animate__animated animate__fadeInRight animate__delay0-5s">
                 </div>
 
             </div>
         </div>
     </section>
-
-
 
 
     <!-- sylosis process -->
@@ -106,7 +116,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-md-4">
-                    <div class="process-box">
+                    <div class="process-box  wow animate__animated animate__fadeInUp">
                         <img src="images/sylosis/icon-1.png" alt="">
                         <h4>Producers</h4>
                         <p>Take control of your business by knowing exactly what you have, where it is, the quality of
@@ -114,7 +124,7 @@
                     </div>
                 </div>
                 <div class="col-md-4">
-                    <div class="process-box">
+                    <div class="process-box  wow animate__animated animate__fadeInUp">
                         <img src="images/sylosis/icon-2.png" alt="">
                         <h4>Elevators</h4>
                         <p>SiloSys communicates directly with scales and scientific instruments to ensure that the data
@@ -123,7 +133,7 @@
                     </div>
                 </div>
                 <div class="col-md-4">
-                    <div class="process-box">
+                    <div class="process-box  wow animate__animated animate__fadeInUp">
                         <img src="images/sylosis/icon-3.png" alt="">
                         <h4>Buyers</h4>
                         <p>Buyers can view the commodity they bought, both quantity and quality, in real time.</p>
@@ -137,12 +147,12 @@
     <!-- sylosis process -->
 
 
-  
+
     <img class="w-100 img-fluid mobile-hide" src="images/trumodity/bg-shape-1.png" alt="">
     <!-- product-details -->
-  
+
     <div class="product-details product-details-2 sylosis-product-details">
-        <div class="title-image-wrapper title-image-wrapper-2">
+        <div class="title-image-wrapper title-image-wrapper-2  wow animate__animated animate__fadeInUp ">
             <img src="images/sylosis/sylosis-icon.png" alt="">
         </div>
         <h2 class="title orange small bottom bottom-center font-weight-bold   wow animate__animated animate__fadeInUp">
@@ -195,12 +205,13 @@
 
         </div>
         <div class="action   wow animate__animated animate__fadeInUp animate__delay1-2s">
-            <a class="btn bg-green text-white" href="#"><span>Learn more about how GrainChain’s innovative suite
+            <a class="btn bg-green text-white" href="products.html"><span>Learn more about how GrainChain’s innovative
+                    suite
                     of products works together to solve the problems facing the agribusiness supply
                     chain.</span><img src="images/buyers/arrow-product.png" alt=""></a>
         </div>
     </div>
-   
+
 
     <!-- home contact -->
     <section class="home-contact home-contact-2" id="bottom-contact">
@@ -269,32 +280,30 @@
                             <div class="footer-menu-box">
                                 <h5>Products</h5>
                                 <ul>
-                                    <li><a href="#">Trumodity</a></li>
-                                    <li><a href="#">Seed Audit</a></li>
-                                    <li><a href="#">SiloSys</a></li>
-                                    <li><a href="#">HarvX</a></li>
+                                    <li><a href="trumodity.html">Trumodity</a></li>
+                                    <li><a href="seed-audit.html">Seed Audit</a></li>
+                                    <li><a href="sylosil">SiloSys</a></li>
+                                    <li><a href="harvx.html">HarvX</a></li>
                                 </ul>
                             </div>
 
                             <div class="footer-menu-box">
                                 <h5>Solutions</h5>
                                 <ul>
-                                    <li><a href="#">For producers</a></li>
-                                    <li><a href="#">For Storage Operators</a></li>
-                                    <li><a href="#">For Buyers</a></li>
-                                    <li><a href="#">Blockchain and Smart Contracts</a></li>
+                                    <li><a href="producer.html">For producers</a></li>
+                                    <li><a href="storage.html">For Storage Operators</a></li>
+                                    <li><a href="buyers.html">For Buyers</a></li>
+                                    <li><a href="blockchain.html">Blockchain and Smart Contracts</a></li>
                                 </ul>
                             </div>
 
                             <div class="footer-menu-box">
                                 <h5>About</h5>
                                 <ul>
-                                    <li><a href="#">Our Team</a></li>
-                                    <li><a href="#">Media</a></li>
-                                    <li><a href="#">Careers</a></li>
-
+                                    <li><a href="team.html">Our Team</a></li>
+                                    <li><a href="media.html">Media</a></li>
+                                    <li><a href="careers.html">Careers</a></li>
                                 </ul>
-
                             </div>
                         </div>
                     </div>
@@ -309,7 +318,6 @@
                     </li>
                     <li><a href="#"><img src="images/intagram.png" alt=""></a></li>
                     <li><a href="#"><img src="images/sm-icon-telegram-Home-Desktop-Website-GC.png" alt=""></a></li>
-
                     <li><a href="#"><img src="images/sm-icon-in-Home-Desktop-Website-GC.png" alt=""></a></li>
                     <li><a href="#"><img src="images/sm-icon-twit-Home-Desktop-Website-GC.png" alt=""></a></li>
 
@@ -319,12 +327,14 @@
 
             <!-- copyright -->
             <div class="copyright">
-                <p>@2020 Copyright, GrainChain - <a href="#">Privacy Policy</a> - <a href="#">Terms of Service</a></p>
+                <p>@2020 Copyright, GrainChain - <a href="#">Privacy Policy</a> - <a href="#">Terms of Service</a> - <a
+                        href="#">Dwolla Terms of Service</a></p>
             </div>
             <!-- copyright -->
         </div>
     </footer>
     <!-- footer -->
+
 
 
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
