--- a/producer.html
+++ b/producer.html
@@ -5,9 +5,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Producers-Grain Chain</title>
+
+    <!-- favicons ========== -->
+    <link rel="shortcut icon" href="images/favicon/favicon.ico">
+    <link rel="apple-touch-icon" href="images/favicon/apple-touch-icon-114x114.png">
+    <link rel="apple-touch-icon" sizes="72x72" href="images/favicon/apple-touch-icon-72x72.png">
+    <link rel="apple-touch-icon" sizes="114x114" href="images/favicon/apple-touch-icon-114x114.png">
+
     <!-- bootrap cdn -->
-
-
 
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
         integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
@@ -35,7 +40,7 @@
             <div class="header-inner">
                 <!-- logo -->
                 <div class="logo">
-                    <a href="#"><img class="img-fluid" src="images/logo.png" alt="Grain Chain"></a>
+                    <a href="index.html"><img class="img-fluid" src="images/logo.png" alt="Grain Chain"></a>
                 </div>
 
                 <!-- Primary  Menu Starts here  -->
@@ -43,10 +48,10 @@
                     <span class="menu-toggle menu-close"><img class="img-fluid" src="images/close.png"
                             alt="mobile toggle"></span>
                     <ul>
-                        <li><a href="#">Products</a></li>
-                        <li><a href="#">Solutions</a></li>
-                        <li><a href="#">Media</a></li>
-                        <li><a href="#">About</a></li>
+                        <li><a href="products.html">Products</a></li>
+                        <li><a href="solutions.html">Solutions</a></li>
+                        <li><a href="media.html">Media</a></li>
+                        <li><a href="team.html">About</a></li>
                         <li><a href="#"><img src="images/earth.png" alt=""></a></li>
                     </ul>
                 </nav>
@@ -58,6 +63,8 @@
     </header>
 
     <!-- header ends her -->
+
+
     <section class="banner banner-producer banner-2 bg-transparent">
         <div class="container-inner">
             <div class="banner-content">
@@ -70,6 +77,7 @@
                     id="banner-enquiry">Book a Demo</button>
             </div>
         </div>
+        <!-- <img src="images/producer/producer-banner.png" alt=""> -->
     </section>
 
     <!-- buyers Challenges -->
@@ -149,7 +157,7 @@
                                 mobile
                                 device.</li>
                         </ul>
-                        <a class="btn bg-yellow text-white mt-3" href="#">Learn More About Trumodity</a>
+                        <a class="btn bg-yellow text-white mt-3" href="trumodity.html">Learn More About Trumodity</a>
                     </div>
                 </div>
             </div>
@@ -194,7 +202,8 @@
                             <li><span class="fa fa-plus text-light-green"></span>Seamlessly integrates with GrainChain’s
                                 suite of products or can be used independently</li>
                         </ul>
-                        <a class="btn bg-light-green text-white mt-3" href="#">Learn More About Seed Audit</a>
+                        <a class="btn bg-light-green text-white mt-3" href="seed-audit.html">Learn More About Seed
+                            Audit</a>
                     </div>
                 </div>
             </div>
@@ -245,7 +254,7 @@
                                 recorded and stored on the cloud on an immutable blockchain
                             </li>
                         </ul>
-                        <a class="btn bg-blue text-white mt-3" href="#">Learn More About Seed Audit</a>
+                        <a class="btn bg-blue text-white mt-3" href="sylosys.html">Learn More About Sylosis</a>
                     </div>
                 </div>
             </div>
@@ -266,7 +275,7 @@
                 </div>
             </div>
             <div class="benefits-content">
-                <h2 class="title text-left bottom orange"><span>Benefits of the HarvX Platform</span>
+                <h2 class="title text-left bottom red"><span>Benefits of the HarvX Platform</span>
                 </h2>
                 <div class="row">
                     <div class="col-md-6">
@@ -295,7 +304,7 @@
 
 
                         </ul>
-                        <a class="btn bg-red text-white mt-3" href="#">Learn More About HarvX</a>
+                        <a class="btn bg-red text-white mt-3" href="harvx.html">Learn More About HarvX</a>
                     </div>
                 </div>
             </div>
@@ -303,7 +312,7 @@
 
 
             <!-- block chain -->
-            <a href="#" class="benefits-box  wow animate__animated animate__fadeInUp animate__delay1-2s">
+            <a href="blockchain.html" class="benefits-box  wow animate__animated animate__fadeInUp animate__delay1-2s">
                 <div class="logo-holder">
                     <img src="images/block-chain-logo.png" alt="">
                 </div>
@@ -314,7 +323,7 @@
                     <img src="images/darkgreen-arrow.png" alt="">
                 </div>
             </a>
-                <!-- block chain -->
+            <!-- block chain -->
         </div>
     </section>
     <!-- benefits  details -->
@@ -392,7 +401,8 @@
 
         </div>
         <div class="action   wow animate__animated animate__fadeInUp animate__delay1-2s">
-            <a class="btn bg-green text-white" href="#"><span>Learn more about how GrainChain’s innovative suite
+            <a class="btn bg-green text-white" href="products.html"><span>Learn more about how GrainChain’s innovative
+                    suite
                     of products works together to solve the problems facing the agribusiness supply
                     chain.</span><img src="images/buyers/arrow-product.png" alt=""></a>
         </div>
@@ -470,32 +480,30 @@
                             <div class="footer-menu-box">
                                 <h5>Products</h5>
                                 <ul>
-                                    <li><a href="#">Trumodity</a></li>
-                                    <li><a href="#">Seed Audit</a></li>
-                                    <li><a href="#">SiloSys</a></li>
-                                    <li><a href="#">HarvX</a></li>
+                                    <li><a href="trumodity.html">Trumodity</a></li>
+                                    <li><a href="seed-audit.html">Seed Audit</a></li>
+                                    <li><a href="sylosil">SiloSys</a></li>
+                                    <li><a href="harvx.html">HarvX</a></li>
                                 </ul>
                             </div>
 
                             <div class="footer-menu-box">
                                 <h5>Solutions</h5>
                                 <ul>
-                                    <li><a href="#">For producers</a></li>
-                                    <li><a href="#">For Storage Operators</a></li>
-                                    <li><a href="#">For Buyers</a></li>
-                                    <li><a href="#">Blockchain and Smart Contracts</a></li>
+                                    <li><a href="producer.html">For producers</a></li>
+                                    <li><a href="storage.html">For Storage Operators</a></li>
+                                    <li><a href="buyers.html">For Buyers</a></li>
+                                    <li><a href="blockchain.html">Blockchain and Smart Contracts</a></li>
                                 </ul>
                             </div>
 
                             <div class="footer-menu-box">
                                 <h5>About</h5>
                                 <ul>
-                                    <li><a href="#">Our Team</a></li>
-                                    <li><a href="#">Media</a></li>
-                                    <li><a href="#">Careers</a></li>
-
+                                    <li><a href="team.html">Our Team</a></li>
+                                    <li><a href="media.html">Media</a></li>
+                                    <li><a href="careers.html">Careers</a></li>
                                 </ul>
-
                             </div>
                         </div>
                     </div>
@@ -510,7 +518,6 @@
                     </li>
                     <li><a href="#"><img src="images/intagram.png" alt=""></a></li>
                     <li><a href="#"><img src="images/sm-icon-telegram-Home-Desktop-Website-GC.png" alt=""></a></li>
-
                     <li><a href="#"><img src="images/sm-icon-in-Home-Desktop-Website-GC.png" alt=""></a></li>
                     <li><a href="#"><img src="images/sm-icon-twit-Home-Desktop-Website-GC.png" alt=""></a></li>
 
@@ -520,12 +527,14 @@
 
             <!-- copyright -->
             <div class="copyright">
-                <p>@2020 Copyright, GrainChain - <a href="#">Privacy Policy</a> - <a href="#">Terms of Service</a> - <a href="#">Dwolla Terms of Service</a></p>
+                <p>@2020 Copyright, GrainChain - <a href="#">Privacy Policy</a> - <a href="#">Terms of Service</a> - <a
+                        href="#">Dwolla Terms of Service</a></p>
             </div>
             <!-- copyright -->
         </div>
     </footer>
     <!-- footer -->
+
 
 
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
