--- a/products.html
+++ b/products.html
@@ -5,10 +5,15 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Our Products-Grain Chain</title>
+
+
+    <!-- favicons ========== -->
+    <link rel="shortcut icon" href="images/favicon/favicon.ico">
+    <link rel="apple-touch-icon" href="images/favicon/apple-touch-icon-114x114.png">
+    <link rel="apple-touch-icon" sizes="72x72" href="images/favicon/apple-touch-icon-72x72.png">
+    <link rel="apple-touch-icon" sizes="114x114" href="images/favicon/apple-touch-icon-114x114.png">
+
     <!-- bootrap cdn -->
-
-
-
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
         integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
 
@@ -35,7 +40,7 @@
             <div class="header-inner">
                 <!-- logo -->
                 <div class="logo">
-                    <a href="#"><img class="img-fluid" src="images/logo.png" alt="Grain Chain"></a>
+                    <a href="index.html"><img class="img-fluid" src="images/logo.png" alt="Grain Chain"></a>
                 </div>
 
                 <!-- Primary  Menu Starts here  -->
@@ -43,10 +48,10 @@
                     <span class="menu-toggle menu-close"><img class="img-fluid" src="images/close.png"
                             alt="mobile toggle"></span>
                     <ul>
-                        <li><a href="#">Products</a></li>
-                        <li><a href="#">Solutions</a></li>
-                        <li><a href="#">Media</a></li>
-                        <li><a href="#">About</a></li>
+                        <li><a href="products.html">Products</a></li>
+                        <li><a href="solutions.html">Solutions</a></li>
+                        <li><a href="media.html">Media</a></li>
+                        <li><a href="team.html">About</a></li>
                         <li><a href="#"><img src="images/earth.png" alt=""></a></li>
                     </ul>
                 </nav>
@@ -61,12 +66,13 @@
     <section class="banner banner-2 banner-products bg-transparent">
         <div class="container-inner">
             <div class="banner-content">
-                <h1 class="title text-white bottom bottom-center  wow animate__animated animate__fadeInUp"><span>Our Products</span>
+                <h1 class="title text-white bottom bottom-center  wow animate__animated animate__fadeInUp"><span>Our
+                        Products</span>
                 </h1>
                 <p class="text-white wow animate__animated animate__fadeInUp animate__delay0-5s">Technology Driven
                     Solutions to the Biggest Challenges Facing the Global Agricultural Supply-Chain.
                 </p>
-                <button class="btn btn-transparent   wow animate__animated animate__fadeInUp animate__delay-1s"
+                <button class="btn btn-transparent   wow animate__animated animate__fadeInUp animate__delay0-5s"
                     id="banner-enquiry">Book a Demo</button>
             </div>
         </div>
@@ -82,25 +88,26 @@
         <div class="container-inner">
             <div class="row  align-items-center">
                 <div class="col-md-6">
-                    <img class="img-fluid desktop-hide animate__animated animate__fadeInUp"
+                    <img class="img-fluid desktop-hide wow animate__animated animate__fadeInLeft"
                         src="images/products/seed-mobile.png" alt="">
                     <div class="left">
                         <img class="logo-img img-fluid mb-5 animate__animated animate__fadeInUp"
                             src="images/products/seed-logo-png.png" alt="">
-                        <p class="animate__animated animate__fadeInUp animate__delay0-5s"><strong>Seed Audit</strong>
+                        <p class="wow animate__animated animate__fadeInUp animate__delay0-5s"><strong>Seed
+                                Audit</strong>
                             brings the efficiency, transparency and reliability of our
                             postharvest solutions to
                             the preharvest process. All data from seed to harvest (seed receipts, fertilizers, geofenced
                             crop maps, etc) is recorded and tracked securely through our solution, while also allowing
                             for
                             audits and certification.</p>
-                        <div class="action animate__animated animate__fadeInUp animate__delay0-8s">
-                            <a href="#" class="btn bg-light-green text-white">Learn More</a>
+                        <div class="action animate__animated animate__fadeInUp animate__delay0-5s">
+                            <a href="seed-audit.html" class="btn bg-light-green text-white">Learn More</a>
                         </div>
                     </div>
                 </div>
                 <div class="col-md-6 ">
-                    <div class="right animate__animated animate__fadeInUp"> <img class="img-fluid display-img"
+                    <div class="right wow animate__animated animate__fadeInUp"> <img class="img-fluid display-img"
                             src="images/products/mobile-product.png" alt=""></div>
                 </div>
             </div>
@@ -115,14 +122,14 @@
         <div class="container">
             <div class="row align-items-center">
                 <div class="col-md-6">
-                    <div class="left animate__animated animate__fadeInUp">
+                    <div class="left wow animate__animated animate__fadeInLeft">
                         <img class="img-fluid desktop-hide" src="images/products/trumodity-mobile.png" alt="">
                         <img class="img-fluid  display-img" src="images/products/computer-product.png" alt="">
                     </div>
                 </div>
                 <div class="col-md-6">
                     <div class="right">
-                        <img class="logo-img img-fluid mb-5 animate__animated animate__fadeInUp"
+                        <img class="logo-img img-fluid mb-5 wow animate__animated animate__fadeInUp"
                             src="images/products/trumodity-logo-png.png" alt="">
                         <p class="animate__animated animate__fadeInUp animate__delay0-5s"><strong>Trumodity</strong> is
                             GrainChain's comprehensive transaction platform for the
@@ -133,8 +140,8 @@
                             marketplace and its participants. Trumodity's innovative blockchain architecture creates a
                             secure, immutable record of commodity data and transactions along the entire supply chain.
                         </p>
-                        <div class="action animate__animated animate__fadeInUp animate__delay0-8s">
-                            <a href="#" class="btn bg-yellow text-white">Learn More</a>
+                        <div class="action wow animate__animated animate__fadeInUp animate__delay0-5s">
+                            <a href="trumodity.html" class="btn bg-yellow text-white">Learn More</a>
                         </div>
                     </div>
                 </div>
@@ -152,7 +159,7 @@
             <div class="row align-items-center">
                 <div class="col-md-6">
                     <img class="img-fluid desktop-hide" src="images/products/sylosiys-mobiel.png" alt="">
-                    <div class="left animate__animated animate__fadeInUp"><img class="logo-img img-fluid mb-5"
+                    <div class="left  wow animate__animated animate__fadeInUp"><img class="logo-img img-fluid mb-5"
                             src="images/products/silosys-logo-png.png" alt="">
                         <p class="animate__animated animate__fadeInUp animate__delay0-5s"><strong>SiloSys</strong> is a
                             cloud-based contract and inventory management system for
@@ -163,13 +170,13 @@
                             entered
                             is accurate. All data is stored securely on the blockchain along with the records from
                             Trumodity.</p>
-                        <div class="action animate__animated animate__fadeInUp animate__delay0-8s">
-                            <a href="#" class="btn bg-blue text-white">Learn More</a>
+                        <div class="action animate__animated animate__fadeInUp animate__delay0-5s">
+                            <a href="sylosys.html" class="btn bg-blue text-white">Learn More</a>
                         </div>
                     </div>
                 </div>
                 <div class="col-md-6">
-                    <div class="right animate__animated animate__fadeInUp ">
+                    <div class="right wow animate__animated animate__fadeInRight ">
                         <img class="img-fluid  display-img" src="images/products/dashboard-procut.png" alt="">
                     </div>
                 </div>
@@ -185,7 +192,7 @@
         <div class="container-inner">
             <div class="row align-items-center">
                 <div class="col-md-6">
-                    <div class="left  animate__animated animate__fadeInUp ">
+                    <div class="left wow animate__animated animate__fadeInLeft">
                         <img class="img-fluid desktop-hide" src="images/products/harvex-mobile.png" alt="">
                         <img class="img-fluid  display-img" src="images/products/multiple-mobile-product.png" alt="">
                     </div>
@@ -195,10 +202,15 @@
                         <img class="logo-img img-fluid mb-5  animate__animated animate__fadeInUp"
                             src="images/products/harvx-logo-png.png" alt="">
                         <p class=" animate__animated animate__fadeInUp animate__delay0-5s"><strong>HarvX</strong>
-                             makes logistics easy by connecting drivers and producers directly. Producers can schedule pickup and delivery when they need it, as well as guide drivers through their farms directly to the harvest location. Drivers can accept jobs, schedule future jobs and receive payments all from their mobile app. Facilities like grain elevators and silos can also track and manage drop offs easily through the mobile app. HarvX adds yet another layer of security, efficiency and accountability to the GrainChain suite of products.
+                            makes logistics easy by connecting drivers and producers directly. Producers can schedule
+                            pickup and delivery when they need it, as well as guide drivers through their farms directly
+                            to the harvest location. Drivers can accept jobs, schedule future jobs and receive payments
+                            all from their mobile app. Facilities like grain elevators and silos can also track and
+                            manage drop offs easily through the mobile app. HarvX adds yet another layer of security,
+                            efficiency and accountability to the GrainChain suite of products.
                         </p>
-                        <div class="action  animate__animated animate__fadeInUp animate__delay0-8s">
-                            <a href="#" class="btn bg-red text-white">Learn More</a>
+                        <div class="action wow  animate__animated animate__fadeInUp animate__delay0-5s">
+                            <a href="harvx.html" class="btn bg-red text-white">Learn More</a>
                         </div>
                     </div>
                 </div>
@@ -281,32 +293,30 @@
                             <div class="footer-menu-box">
                                 <h5>Products</h5>
                                 <ul>
-                                    <li><a href="#">Trumodity</a></li>
-                                    <li><a href="#">Seed Audit</a></li>
-                                    <li><a href="#">SiloSys</a></li>
-                                    <li><a href="#">HarvX</a></li>
+                                    <li><a href="trumodity.html">Trumodity</a></li>
+                                    <li><a href="seed-audit.html">Seed Audit</a></li>
+                                    <li><a href="sylosil">SiloSys</a></li>
+                                    <li><a href="harvx.html">HarvX</a></li>
                                 </ul>
                             </div>
 
                             <div class="footer-menu-box">
                                 <h5>Solutions</h5>
                                 <ul>
-                                    <li><a href="#">For producers</a></li>
-                                    <li><a href="#">For Storage Operators</a></li>
-                                    <li><a href="#">For Buyers</a></li>
-                                    <li><a href="#">Blockchain and Smart Contracts</a></li>
+                                    <li><a href="producer.html">For producers</a></li>
+                                    <li><a href="storage.html">For Storage Operators</a></li>
+                                    <li><a href="buyers.html">For Buyers</a></li>
+                                    <li><a href="blockchain.html">Blockchain and Smart Contracts</a></li>
                                 </ul>
                             </div>
 
                             <div class="footer-menu-box">
                                 <h5>About</h5>
                                 <ul>
-                                    <li><a href="#">Our Team</a></li>
-                                    <li><a href="#">Media</a></li>
-                                    <li><a href="#">Careers</a></li>
-
+                                    <li><a href="team.html">Our Team</a></li>
+                                    <li><a href="media.html">Media</a></li>
+                                    <li><a href="careers.html">Careers</a></li>
                                 </ul>
-
                             </div>
                         </div>
                     </div>
@@ -321,7 +331,6 @@
                     </li>
                     <li><a href="#"><img src="images/intagram.png" alt=""></a></li>
                     <li><a href="#"><img src="images/sm-icon-telegram-Home-Desktop-Website-GC.png" alt=""></a></li>
-
                     <li><a href="#"><img src="images/sm-icon-in-Home-Desktop-Website-GC.png" alt=""></a></li>
                     <li><a href="#"><img src="images/sm-icon-twit-Home-Desktop-Website-GC.png" alt=""></a></li>
 
@@ -331,12 +340,14 @@
 
             <!-- copyright -->
             <div class="copyright">
-                <p>@2020 Copyright, GrainChain - <a href="#">Privacy Policy</a> - <a href="#">Terms of Service</a> - <a href="#">Dwolla Terms of Service</a></p>
+                <p>@2020 Copyright, GrainChain - <a href="#">Privacy Policy</a> - <a href="#">Terms of Service</a> - <a
+                        href="#">Dwolla Terms of Service</a></p>
             </div>
             <!-- copyright -->
         </div>
     </footer>
     <!-- footer -->
+
 
 
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
