--- a/solutions.html
+++ b/solutions.html
@@ -5,6 +5,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Solutions-Grain Chain</title>
+
+    <!-- favicons ========== -->
+    <link rel="shortcut icon" href="images/favicon/favicon.ico">
+    <link rel="apple-touch-icon" href="images/favicon/apple-touch-icon-114x114.png">
+    <link rel="apple-touch-icon" sizes="72x72" href="images/favicon/apple-touch-icon-72x72.png">
+    <link rel="apple-touch-icon" sizes="114x114" href="images/favicon/apple-touch-icon-114x114.png">
+
     <!-- bootrap cdn -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
         integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
@@ -29,7 +36,7 @@
             <div class="header-inner">
                 <!-- logo -->
                 <div class="logo">
-                    <a href="#"><img class="img-fluid" src="images/logo.png" alt="Grain Chain"></a>
+                    <a href="index.html"><img class="img-fluid" src="images/logo.png" alt="Grain Chain"></a>
                 </div>
 
                 <!-- Primary  Menu Starts here  -->
@@ -37,10 +44,10 @@
                     <span class="menu-toggle menu-close"><img class="img-fluid" src="images/close.png"
                             alt="mobile toggle"></span>
                     <ul>
-                        <li><a href="#">Products</a></li>
-                        <li><a href="#">Solutions</a></li>
-                        <li><a href="#">Media</a></li>
-                        <li><a href="#">About</a></li>
+                        <li><a href="products.html">Products</a></li>
+                        <li><a href="solutions.html">Solutions</a></li>
+                        <li><a href="media.html">Media</a></li>
+                        <li><a href="team.html">About</a></li>
                         <li><a href="#"><img src="images/earth.png" alt=""></a></li>
                     </ul>
                 </nav>
@@ -52,6 +59,7 @@
     </header>
 
     <!-- header ends her -->
+
     <section class="banner banner-solution bg-dark-green banner-2">
         <div class="container-inner">
             <div class="banner-content">
@@ -71,7 +79,8 @@
                     <div class="col-lg-3 col-md-4">
                         <div class="problem-box contain-title text-white   wow animate__animated animate__fadeInUp">
                             <h2 class="title text-left bottom font-weight-bold text-white"><span>Problems</span></h2>
-                            <p>GrainChain’s suite of products solve some of the most pressing challenges for farmers, storage operators, buyers and the rest of the agribusiness supply chain: </p>
+                            <p>GrainChain’s suite of products solve some of the most pressing challenges for farmers,
+                                storage operators, buyers and the rest of the agribusiness supply chain: </p>
                         </div>
                     </div>
 
@@ -166,7 +175,9 @@
             <div class="problem-inner desktop-hide">
                 <h2 class="title text-left bottom font-weight-bold text-white  wow animate__animated animate__fadeInUp">
                     <span>Problems</span></h2>
-                <p class=" wow animate__animated animate__fadeInUp animate__delay0-5s">GrainChain’s suite of products solve some of the most pressing challenges for farmers, storage operators, buyers and the rest of the agribusiness supply chain: </p>
+                <p class=" wow animate__animated animate__fadeInUp animate__delay0-5s">GrainChain’s suite of products
+                    solve some of the most pressing challenges for farmers, storage operators, buyers and the rest of
+                    the agribusiness supply chain: </p>
                 <div class="row problem-list owl-carousel owl-theme no-gutters ">
 
                     <div class="col-lg-3 col-md-4">
@@ -277,8 +288,9 @@
                                 <p>Empowering Producers and bringing efficiency, reliability and security to the
                                     agricultural supply chain.</p>
                             </div>
-                            <a class="bottom-icon" href="#"> <img class="img-fluid" src="images/orange-arrow.png" alt=""></a>
-                            
+                            <a class="bottom-icon" href="producer.html"> <img class="img-fluid"
+                                    src="images/orange-arrow.png" alt=""></a>
+
                         </div>
                     </div>
                     <div class="col-md-4">
@@ -290,8 +302,9 @@
                                     secure way.
                                 </p>
                             </div>
-                            <a class="bottom-icon" href="#">  <img class="img-fluid" src="images/orange-arrow.png" alt=""></a>
-                           
+                            <a class="bottom-icon" href="storage.html"> <img class="img-fluid"
+                                    src="images/orange-arrow.png" alt=""></a>
+
                         </div>
                     </div>
                     <div class="col-md-4">
@@ -302,7 +315,8 @@
                                 <p>Harnessing blockchain technology and smart contracts to build a better market for
                                     buyers.</p>
                             </div>
-                            <a class="bottom-icon" href="#">  <img class="img-fluid" src="images/orange-arrow.png" alt=""></a>
+                            <a class="bottom-icon" href="buyers.html"> <img class="img-fluid"
+                                    src="images/orange-arrow.png" alt=""></a>
                         </div>
                     </div>
                 </div>
@@ -321,7 +335,8 @@
                         src="images/work-flow.png " alt="">
                 </div>
                 <div class="work-process">
-                    <h2 class="title"><span>How Does it all Work Together</span></h2>
+                    <h2 class="title   wow animate__animated animate__fadeInUp "><span>How Does it all Work
+                            Together</span></h2>
                     <div class="work-process-list owl-carousel owl-theme">
                         <div class="work-process-box">
                             <img class="img-fluid" src="images/process-1.png" alt="">
@@ -364,7 +379,7 @@
             <span>GrainChain’s suite of products work together to bring
                 efficiency, reliability and accountability to every stage of the agricultural supply chain.</span></h2>
         <div class="container-inner mt-5">
-            <a href="#" class="benefits-box  wow animate__animated animate__fadeInUp ">
+            <a href="trumodity.html" class="benefits-box  wow animate__animated animate__fadeInUp ">
                 <div class="logo-holder">
                     <img src="images/trumodity-logo-2.png" alt="">
                 </div>
@@ -376,7 +391,7 @@
                 </div>
             </a>
 
-            <a href="#" class="benefits-box  wow animate__animated animate__fadeInUp animate__delay0-5s">
+            <a href="seed-audit.html" class="benefits-box  wow animate__animated animate__fadeInUp animate__delay0-5s">
                 <div class="logo-holder">
                     <img src="images/seed-audit-logo-2.png" alt="">
                 </div>
@@ -388,7 +403,7 @@
                 </div>
             </a>
 
-            <a href="#" class="benefits-box   wow animate__animated animate__fadeInUp animate__delay0-5s">
+            <a href="sylosys.html" class="benefits-box   wow animate__animated animate__fadeInUp animate__delay0-5s">
                 <div class="logo-holder">
                     <img src="images/silosys-logo-2.png" alt="">
                 </div>
@@ -401,7 +416,7 @@
                 </div>
             </a>
 
-            <a href="#" class="benefits-box  wow animate__animated animate__fadeInUp animate__delay0-8s">
+            <a href="harvx.html" class="benefits-box  wow animate__animated animate__fadeInUp animate__delay0-8s">
                 <div class="logo-holder">
                     <img src="images/harvex-logo-2.png" alt="">
                 </div>
@@ -413,7 +428,7 @@
                 </div>
             </a>
 
-            <a href="#" class="benefits-box  wow animate__animated animate__fadeInUp animate__delay1-2s">
+            <a href="blockchain.html" class="benefits-box  wow animate__animated animate__fadeInUp animate__delay1-2s">
                 <div class="logo-holder">
                     <img src="images/block-chain-logo.png" alt="">
                 </div>
@@ -495,32 +510,30 @@
                             <div class="footer-menu-box">
                                 <h5>Products</h5>
                                 <ul>
-                                    <li><a href="#">Trumodity</a></li>
-                                    <li><a href="#">Seed Audit</a></li>
-                                    <li><a href="#">SiloSys</a></li>
-                                    <li><a href="#">HarvX</a></li>
+                                    <li><a href="trumodity.html">Trumodity</a></li>
+                                    <li><a href="seed-audit.html">Seed Audit</a></li>
+                                    <li><a href="sylosil">SiloSys</a></li>
+                                    <li><a href="harvx.html">HarvX</a></li>
                                 </ul>
                             </div>
 
                             <div class="footer-menu-box">
                                 <h5>Solutions</h5>
                                 <ul>
-                                    <li><a href="#">For producers</a></li>
-                                    <li><a href="#">For Storage Operators</a></li>
-                                    <li><a href="#">For Buyers</a></li>
-                                    <li><a href="#">Blockchain and Smart Contracts</a></li>
+                                    <li><a href="producer.html">For producers</a></li>
+                                    <li><a href="storage.html">For Storage Operators</a></li>
+                                    <li><a href="buyers.html">For Buyers</a></li>
+                                    <li><a href="blockchain.html">Blockchain and Smart Contracts</a></li>
                                 </ul>
                             </div>
 
                             <div class="footer-menu-box">
                                 <h5>About</h5>
                                 <ul>
-                                    <li><a href="#">Our Team</a></li>
-                                    <li><a href="#">Media</a></li>
-                                    <li><a href="#">Careers</a></li>
-
+                                    <li><a href="team.html">Our Team</a></li>
+                                    <li><a href="media.html">Media</a></li>
+                                    <li><a href="careers.html">Careers</a></li>
                                 </ul>
-
                             </div>
                         </div>
                     </div>
@@ -535,7 +548,6 @@
                     </li>
                     <li><a href="#"><img src="images/intagram.png" alt=""></a></li>
                     <li><a href="#"><img src="images/sm-icon-telegram-Home-Desktop-Website-GC.png" alt=""></a></li>
-
                     <li><a href="#"><img src="images/sm-icon-in-Home-Desktop-Website-GC.png" alt=""></a></li>
                     <li><a href="#"><img src="images/sm-icon-twit-Home-Desktop-Website-GC.png" alt=""></a></li>
 
@@ -545,12 +557,14 @@
 
             <!-- copyright -->
             <div class="copyright">
-                <p>@2020 Copyright, GrainChain - <a href="#">Privacy Policy</a> - <a href="#">Terms of Service</a> - <a href="#">Dwolla Terms of Service</a></p>
+                <p>@2020 Copyright, GrainChain - <a href="#">Privacy Policy</a> - <a href="#">Terms of Service</a> - <a
+                        href="#">Dwolla Terms of Service</a></p>
             </div>
             <!-- copyright -->
         </div>
     </footer>
     <!-- footer -->
+
 
 
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
