--- a/team.html
+++ b/team.html
@@ -5,6 +5,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Our Team-Grain Chain</title>
+
+
+    <!-- favicons ========== -->
+    <link rel="shortcut icon" href="images/favicon/favicon.ico">
+    <link rel="apple-touch-icon" href="images/favicon/apple-touch-icon-114x114.png">
+    <link rel="apple-touch-icon" sizes="72x72" href="images/favicon/apple-touch-icon-72x72.png">
+    <link rel="apple-touch-icon" sizes="114x114" href="images/favicon/apple-touch-icon-114x114.png">
+
     <!-- bootrap cdn -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
         integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
@@ -29,7 +37,7 @@
             <div class="header-inner">
                 <!-- logo -->
                 <div class="logo">
-                    <a href="#"><img class="img-fluid" src="images/logo.png" alt="Grain Chain"></a>
+                    <a href="index.html"><img class="img-fluid" src="images/logo.png" alt="Grain Chain"></a>
                 </div>
 
                 <!-- Primary  Menu Starts here  -->
@@ -37,10 +45,10 @@
                     <span class="menu-toggle menu-close"><img class="img-fluid" src="images/close.png"
                             alt="mobile toggle"></span>
                     <ul>
-                        <li><a href="#">Products</a></li>
-                        <li><a href="#">Solutions</a></li>
-                        <li><a href="#">Media</a></li>
-                        <li><a href="#">About</a></li>
+                        <li><a href="products.html">Products</a></li>
+                        <li><a href="solutions.html">Solutions</a></li>
+                        <li><a href="media.html">Media</a></li>
+                        <li><a href="team.html">About</a></li>
                         <li><a href="#"><img src="images/earth.png" alt=""></a></li>
                     </ul>
                 </nav>
@@ -69,7 +77,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-md-6">
-                    <div class="team-intro-content">
+                    <div class="team-intro-content   wow animate__animated animate__fadeInUp">
                         <p>GrainChain's team brings a wealth of expertise in agriculture, business, software development
                             and blockchain technology together to build proven, world-class, innovative solutions to the
                             agricultural commodity supply chain.</p>
@@ -88,39 +96,75 @@
     <div class="team-member-main">
         <div class="container">
             <h2 class="title font-weight-bold  bottom bottom-center  wow animate__animated animate__fadeInUp">
-                <span>About GrainChain Inc</span></h2>
+                <span>The GrainChain Team</span></h2>
             <div class="team-member-list">
                 <div class="row">
-                    <div class="col-md-3">
-                        <div class="team-member">
+                    <div class="col-md-6 col-lg-3">
+                        <div class="team-member   wow animate__animated animate__fadeInUp">
                             <img src="images/team/team-member-1.png" class="img-fluid team-member-pic" alt="">
                             <h4 class="team-member-name">LUIS MACIAS</h4>
                             <p class="team-member-post">Co-founder & CEO</p>
-                            <button class="btn btn-primary btn-view-more">bio</button>
+                            <button class="btn btn-primary btn-view-more  btn-bio" data-member-id="#luis">bio</button>
+                            <div class="bio-details" id="luis">
+                                Luis is an innovator and entrepreneur that has nearly 20 years of experience designing,
+                                inventing, and implementing technological solutions in the government, agriculture and
+                                insurance sectors. He has spent the last six years focusing on viable agricultural
+                                solutions, where he founded and implemented SiloSys and developed GrainChain’s
+                                transaction platform using smart contracts. He brings an experienced, relentless
+                                commitment to enhancing the performance of business processes and mission-critical
+                                deployments to the team, and his pioneering leadership in the technology and agriculture
+                                sectors ensures that GrainChain will remain the leader in its market space.
+                            </div>
                         </div>
                     </div>
-                    <div class="col-md-3">
-                        <div class="team-member">
+                    <div class="col-md-6 col-lg-3">
+                        <div class="team-member   wow animate__animated animate__fadeInUp">
                             <img src="images/team/team-member-2.png" class="img-fluid team-member-pic" alt="">
                             <h4 class="team-member-name">FERNANDO CAMPOS</h4>
                             <p class="team-member-post">Co-founder & President</p>
-                            <button class="btn btn-primary btn-view-more">bio</button>
+                            <button class="btn btn-primary btn-view-more btn-bio"
+                                data-member-id="#fernando">bio</button>
+                            <div class="bio-details" id="fernando">
+                                Fernando is one of the world’s leading innovators in blockchain technology. An early
+                                advocate of the value of blockchain, Fernando is passionate about developing
+                                applications of blockchain technology that improve quality of life and working
+                                conditions for all people. He brings this passion, as well as over 16 years of
+                                experience in entrepreneurship, startup management, and real estate investment to the
+                                GrainChain team.
+                            </div>
                         </div>
                     </div>
-                    <div class="col-md-3">
-                        <div class="team-member">
+                    <div class="col-md-6 col-lg-3">
+                        <div class="team-member  wow animate__animated animate__fadeInUp">
                             <img src="images/team/team-member-3.png" class="img-fluid team-member-pic" alt="">
                             <h4 class="team-member-name">JAIME LOPEZ</h4>
                             <p class="team-member-post">CO-FOUNDER & CHIEF STRATEGY OFFICER</p>
-                            <button class="btn btn-primary btn-view-more">bio</button>
+                            <button class="btn btn-primary btn-view-more  btn-bio" data-member-id="#Jamie">bio</button>
+                            <div class="bio-details" id="Jaime">
+                                Jaime received a B.A. in Economics from the University of Texas in 2005 and graduated
+                                with honors from the University of Texas School of Law in 2008. He started his legal
+                                career over a decade ago and still practices corporate and business litigation at Millin
+                                & Millin, PLLC. Jaime has also been active with successful companies in a wide variety
+                                of sectors including financial, health care, hospitality, construction, technology and
+                                blockchain, and real estate. He is an active participant on both for-profit and
+                                non-profit boards.
+                            </div>
                         </div>
                     </div>
-                    <div class="col-md-3">
-                        <div class="team-member">
+                    <div class="col-md-6 col-lg-3">
+                        <div class="team-member   wow animate__animated animate__fadeInUp">
                             <img src="images/team/team-member-4.png" class="img-fluid team-member-pic" alt="">
                             <h4 class="team-member-name">CARLOS HUGGINGS</h4>
                             <p class="team-member-post">CO-FOUNDER & CHIEF TECHNOLOGY OFFICER</p>
-                            <button class="btn btn-primary btn-view-more">bio</button>
+                            <button class="btn btn-primary btn-view-more  btn-bio" data-member-id="#carlos">bio</button>
+                            <div class="bio-details" id="carolos">
+                                Carlos has built his career on developing and implementing innovative, cost-effective
+                                software solutions for businesses.
+                                He has worked with over 50 firms worldwide and brings over 20 years of experience as a
+                                full-stack developer and systems architect to the GrainChain team. He serves as the
+                                leading software developer of GrainChain’s transaction platform, and is an invaluable
+                                driver of implementing our solution on the ground.
+                            </div>
                         </div>
                     </div>
                 </div>
@@ -139,23 +183,28 @@
         <div class="container-inner">
             <h2 class="title font-weight-bold  bottom bottom-center orange wow animate__animated animate__fadeInUp">
                 <span>About GrainChain Inc</span></h2>
-            <p>GrainChain’s innovative suite of products help Producers bring their products to market quickly,
+            <p class="wow animate__animated animate__fadeInUp  animate__delay0-5s">GrainChain’s innovative suite of
+                products help Producers bring their products to market quickly,
                 efficiently and reliably. Cmodity is our flagship transaction and exchange platform that enables
                 trustworthy transactions, connects Producers directly to buyers and reduces uncertainties in doing
                 business internationally. Our system handles all the post-harvest processes in one cloud-based,
                 blockchain enabled platform. SiloSys is the inventory management solution for grain elevators and
                 storage operators. HarvX is the logistics management system for transporting harvests from farms to
                 storage operators. </p>
-            <p>In 2013, GrainChain’s founders were approached by a large Texas farm looking to digitize its supply chain
+            <p class="wow animate__animated animate__fadeInUp  animate__delay0-5s">In 2013, GrainChain’s founders were
+                approached by a large Texas farm looking to digitize its supply chain
                 operations, improve inventory management, and enable fast, secure, and easy payment. Finding no
                 satisfactory solution in the market, GrainChain’s founders set out to build one, and created SiloSys.
                 After numerous years in the industry, and with the expansion of SiloSys, the founders set out to
                 simplify the flow of the entire supply chain. In 2018, GrainChain was officially founded to accomplish
                 this goal.</p>
-            <p>Since then, our company has established agreements in multiple regions to help make the commodity supply
+            <p class="wow animate__animated animate__fadeInUp  animate__delay0-5s">Since then, our company has
+                established agreements in multiple regions to help make the commodity supply
                 chain more efficient, secure and transparent. GrainChain has offices in McAllen, Texas, Miami,
                 Guadalajara and Honduras.</p>
-            <button class="btn btn-primary btn-view-more">Learn More</button>
+            <button
+                class="btn btn-primary btn-view-more  wow animate__animated animate__fadeInUp  animate__delay0-5s">Learn
+                More</button>
         </div>
     </section>
     <!-- about grainchain inc -->
@@ -232,32 +281,30 @@
                             <div class="footer-menu-box">
                                 <h5>Products</h5>
                                 <ul>
-                                    <li><a href="#">Trumodity</a></li>
-                                    <li><a href="#">Seed Audit</a></li>
-                                    <li><a href="#">SiloSys</a></li>
-                                    <li><a href="#">HarvX</a></li>
+                                    <li><a href="trumodity.html">Trumodity</a></li>
+                                    <li><a href="seed-audit.html">Seed Audit</a></li>
+                                    <li><a href="sylosil">SiloSys</a></li>
+                                    <li><a href="harvx.html">HarvX</a></li>
                                 </ul>
                             </div>
 
                             <div class="footer-menu-box">
                                 <h5>Solutions</h5>
                                 <ul>
-                                    <li><a href="#">For producers</a></li>
-                                    <li><a href="#">For Storage Operators</a></li>
-                                    <li><a href="#">For Buyers</a></li>
-                                    <li><a href="#">Blockchain and Smart Contracts</a></li>
+                                    <li><a href="producer.html">For producers</a></li>
+                                    <li><a href="storage.html">For Storage Operators</a></li>
+                                    <li><a href="buyers.html">For Buyers</a></li>
+                                    <li><a href="blockchain.html">Blockchain and Smart Contracts</a></li>
                                 </ul>
                             </div>
 
                             <div class="footer-menu-box">
                                 <h5>About</h5>
                                 <ul>
-                                    <li><a href="#">Our Team</a></li>
-                                    <li><a href="#">Media</a></li>
-                                    <li><a href="#">Careers</a></li>
-
+                                    <li><a href="team.html">Our Team</a></li>
+                                    <li><a href="media.html">Media</a></li>
+                                    <li><a href="careers.html">Careers</a></li>
                                 </ul>
-
                             </div>
                         </div>
                     </div>
@@ -272,7 +319,6 @@
                     </li>
                     <li><a href="#"><img src="images/intagram.png" alt=""></a></li>
                     <li><a href="#"><img src="images/sm-icon-telegram-Home-Desktop-Website-GC.png" alt=""></a></li>
-
                     <li><a href="#"><img src="images/sm-icon-in-Home-Desktop-Website-GC.png" alt=""></a></li>
                     <li><a href="#"><img src="images/sm-icon-twit-Home-Desktop-Website-GC.png" alt=""></a></li>
 
@@ -289,6 +335,7 @@
         </div>
     </footer>
     <!-- footer -->
+
 
 
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
