--- a/trumodity.html
+++ b/trumodity.html
@@ -5,10 +5,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Trumodity-Grain Chain</title>
+
+    <!-- favicons ========== -->
+    <link rel="shortcut icon" href="images/favicon/favicon.ico">
+    <link rel="apple-touch-icon" href="images/favicon/apple-touch-icon-114x114.png">
+    <link rel="apple-touch-icon" sizes="72x72" href="images/favicon/apple-touch-icon-72x72.png">
+    <link rel="apple-touch-icon" sizes="114x114" href="images/favicon/apple-touch-icon-114x114.png">
+
     <!-- bootrap cdn -->
-
-
-
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
         integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
 
@@ -37,7 +41,7 @@
             <div class="header-inner">
                 <!-- logo -->
                 <div class="logo">
-                    <a href="#"><img class="img-fluid" src="images/logo.png" alt="Grain Chain"></a>
+                    <a href="index.html"><img class="img-fluid" src="images/logo.png" alt="Grain Chain"></a>
                 </div>
 
                 <!-- Primary  Menu Starts here  -->
@@ -45,10 +49,10 @@
                     <span class="menu-toggle menu-close"><img class="img-fluid" src="images/close.png"
                             alt="mobile toggle"></span>
                     <ul>
-                        <li><a href="#">Products</a></li>
-                        <li><a href="#">Solutions</a></li>
-                        <li><a href="#">Media</a></li>
-                        <li><a href="#">About</a></li>
+                        <li><a href="products.html">Products</a></li>
+                        <li><a href="solutions.html">Solutions</a></li>
+                        <li><a href="media.html">Media</a></li>
+                        <li><a href="team.html">About</a></li>
                         <li><a href="#"><img src="images/earth.png" alt=""></a></li>
                     </ul>
                 </nav>
@@ -68,7 +72,7 @@
                 <img class="title-image img-fluid" src="images/trumodity/banner-title-img.png" alt="">
                 <p class="text-white wow animate__animated animate__fadeInUp animate__delay0-5s">
                     Comprehensive Transaction Platform </p>
-                <button class="btn btn-transparent   wow animate__animated animate__fadeInUp animate__delay-1s"
+                <button class="btn btn-transparent  wow animate__animated animate__fadeInUp animate__delay0-5s"
                     id="banner-enquiry">Book a Demo</button>
             </div>
         </div>
@@ -80,12 +84,15 @@
         <div class="container">
             <div class="row">
                 <div class="col-md-6">
-                    <img src="images/trumodity/computer-img.png" alt="" class="display-img mobile-hide img-fluid">
+                    <img src="images/trumodity/computer-img.png" alt=""
+                        class="display-img mobile-hide img-fluid   wow animate__animated animate__fadeInLeft">
                 </div>
                 <div class="col-md-6">
                     <div class="about-trumodity">
-                        <img src="images/trumodity/what-is-trumodity.png" alt="" class="title-img img-fluid">
-                        <p><strong>Trumodity</strong> is GrainChain's comprehensive transaction platform for the
+                        <img src="images/trumodity/what-is-trumodity.png" alt=""
+                            class="title-img img-fluid   wow animate__animated animate__fadeInUp animate__delay0-5s">
+                        <p class="wow animate__animated animate__fadeInUp animate__delay0-5s"><strong>Trumodity</strong>
+                            is GrainChain's comprehensive transaction platform for the
                             agricultural industry. Cmodity facilitates prompt payment to Producers and suppliers and the
                             immediate availability of tradable commodities to buyers. It attacks fraud and corruption
                             through certification and accountability while streamlining procedures that burden the
@@ -108,12 +115,15 @@
                             class="title orange bottom text-left font-weight-bold   wow animate__animated animate__fadeInUp">
                             <span>Mobile App Features</span></h2>
                         <ul class="features-list">
-                            <li>Blockchain-enabled platform with enhanced security,
+                            <li class="  wow animate__animated animate__fadeInUp animate__delay0-5s">Blockchain-enabled
+                                platform with enhanced security,
                                 reliability, transparency and data privacy
                             </li>
-                            <li>Fast domestic and international settlements
+                            <li class="  wow animate__animated animate__fadeInUp animate__delay0-5s">Fast domestic and
+                                international settlements
                                 using GrainPay, including instant title transfers</li>
-                            <li>Easily negotiate complex purchase agreements with
+                            <li class="  wow animate__animated animate__fadeInUp animate__delay0-5s">Easily negotiate
+                                complex purchase agreements with
                                 multiple parties using smart contracts</li>
                         </ul>
                     </div>
@@ -122,7 +132,7 @@
                     <h2
                         class="title orange bottom text-left font-weight-bold desktop-hide wow animate__animated animate__fadeInUp">
                         <span>Mobile App Features</span></h2>
-                    <div class="app-img-list slider slider_circle_10" id="app-img-list">
+                    <!-- <div class="app-img-list slider slider_circle_10" id="app-img-list">
                         <div><img class="img-fluid" src="images/harvx/hx-facility-mob-1.png" alt="">
                             <p class="desktop-hide mt-2 text-center">Blockchain-enabled platform with enhanced security,
                                 reliability, transparency and data privacy</p>
@@ -140,6 +150,17 @@
                             <div class="next_button"></div>
                             <div class="prev_button"></div>
                    
+                    </div> -->
+                    <div class="mobile-app-features-right text-center">
+                        <img src="images/trumodity/mobile-img.png" alt="" class="img-fluid feature-img">
+                        <ul class="mobile-app-features-text-slider owl-carousel owl-theme desktop-hide">
+                            <li>Blockchain-enabled platform with enhanced security,
+                                reliability, transparency and data privacy</li>
+                            <li>Fast domestic and international settlements
+                                using GrainPay, including instant title transfers</li>
+                            <li>Easily negotiate complex purchase agreements with
+                                multiple parties using smart contracts</li>
+                        </ul>
                     </div>
                 </div>
             </div>
@@ -157,7 +178,7 @@
 
 
         <div class="title-image-wrapper">
-            <img src="images/buyers/trumodity-icon.png" alt="">
+            <img src="images/trumodity/trumodity-logo-2.png" alt="">
         </div>
         <h2 class="title orange small bottom bottom-center font-weight-bold   wow animate__animated animate__fadeInUp">
             <span>GrainChain’s suite of products work together to improve efficiency, reliability and
@@ -169,7 +190,7 @@
                     <div class="row">
                         <div class="col-md-4">
                             <div
-                                class="product-details-box text-center   wow animate__animated animate__fadeInUp animate__delay-1s">
+                                class="product-details-box text-center wow animate__animated animate__fadeInUp animate__delay-1s">
                                 <img class="img-fluid" src="images/buyers/seed-audit-icons.png" alt="">
                                 <p><strong>Seed Audit</strong> is our preharvest management solution, which securely
                                     records
@@ -210,7 +231,8 @@
 
         </div>
         <div class="action   wow animate__animated animate__fadeInUp animate__delay1-2s">
-            <a class="btn bg-green text-white" href="#"><span>Learn more about how GrainChain’s innovative suite
+            <a class="btn bg-green text-white" href="products.html"><span>Learn more about how GrainChain’s innovative
+                    suite
                     of products works together to solve the problems facing the agribusiness supply
                     chain.</span><img src="images/buyers/arrow-product.png" alt=""></a>
         </div>
@@ -288,32 +310,30 @@
                             <div class="footer-menu-box">
                                 <h5>Products</h5>
                                 <ul>
-                                    <li><a href="#">Trumodity</a></li>
-                                    <li><a href="#">Seed Audit</a></li>
-                                    <li><a href="#">SiloSys</a></li>
-                                    <li><a href="#">HarvX</a></li>
+                                    <li><a href="trumodity.html">Trumodity</a></li>
+                                    <li><a href="seed-audit.html">Seed Audit</a></li>
+                                    <li><a href="sylosil">SiloSys</a></li>
+                                    <li><a href="harvx.html">HarvX</a></li>
                                 </ul>
                             </div>
 
                             <div class="footer-menu-box">
                                 <h5>Solutions</h5>
                                 <ul>
-                                    <li><a href="#">For producers</a></li>
-                                    <li><a href="#">For Storage Operators</a></li>
-                                    <li><a href="#">For Buyers</a></li>
-                                    <li><a href="#">Blockchain and Smart Contracts</a></li>
+                                    <li><a href="producer.html">For producers</a></li>
+                                    <li><a href="storage.html">For Storage Operators</a></li>
+                                    <li><a href="buyers.html">For Buyers</a></li>
+                                    <li><a href="blockchain.html">Blockchain and Smart Contracts</a></li>
                                 </ul>
                             </div>
 
                             <div class="footer-menu-box">
                                 <h5>About</h5>
                                 <ul>
-                                    <li><a href="#">Our Team</a></li>
-                                    <li><a href="#">Media</a></li>
-                                    <li><a href="#">Careers</a></li>
-
+                                    <li><a href="team.html">Our Team</a></li>
+                                    <li><a href="media.html">Media</a></li>
+                                    <li><a href="careers.html">Careers</a></li>
                                 </ul>
-
                             </div>
                         </div>
                     </div>
@@ -328,7 +348,6 @@
                     </li>
                     <li><a href="#"><img src="images/intagram.png" alt=""></a></li>
                     <li><a href="#"><img src="images/sm-icon-telegram-Home-Desktop-Website-GC.png" alt=""></a></li>
-
                     <li><a href="#"><img src="images/sm-icon-in-Home-Desktop-Website-GC.png" alt=""></a></li>
                     <li><a href="#"><img src="images/sm-icon-twit-Home-Desktop-Website-GC.png" alt=""></a></li>
 
@@ -345,6 +364,7 @@
         </div>
     </footer>
     <!-- footer -->
+
 
 
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
